fixed buttons by using text instead; still not perfectly aligned on mobile

--- a/hotel/src/app/(pages)/hotelinfo2/style.css
+++ b/hotel/src/app/(pages)/hotelinfo2/style.css
@@ -172,6 +172,10 @@ button:hover {
     min-width: 100px;
 }
 
+.guest-input {
+    min-width: 75px;
+}
+
 @media (max-width: 958px) {
     .masonry-container {
         display: flex;
@@ -244,6 +248,11 @@ button:hover {
     .dropdown-content {
         min-width: max-content;
         translate: -50px 0;
+        justify-content: center;
+    }
+
+    .guest-input {
+        width: 100%;
     }
 }
 
